# code-agent

./: .env.template  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yaml  deploy.yaml  release.yaml  scan.yaml  scan_other.yaml  security-scan.yaml  tests.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0001_initial_migration.py  0002_add_users.py  0002_vendors.py  0003_tokens.py  0003_user_token.py  0003_user_tokens.py
app/: main.py  models.py  settings.py
app/conf/: app.py  logging.py
app/config/: __init__.py  app.py  logging.py
app/dependencies/: auth.py  settings.py
app/routers/: system.py
app/tests/: test_api.py  test_main.py  test_models.py  test_settings.py
etc/: code-agent.service  docker-compose.yml  docker-entrypoint  nginx.conf
src/: admin.py  constants.py  dependencies.py  exceptions.py  main.py  models.py  settings.py  utils.py
src/admin/: app.py  auth.py
src/admin/views/: __init__.py  models.py  users.py  vendors.py
src/api/: proxy.py  system.py
src/cli/: __init__.py  encryption_key.py  generate_encryption_key.py  generate_secrets.py  secrets.py  simple_ai_client.py
src/database/: base.py  init_db.py  models.py
src/database/repositories/: vendor_repository.py
src/db/: README.md  __init__.py  dependencies.py  models.py  repositories.py  services.py  session.py
src/dependencies/: __init__.py  auth.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 0001_initial.py
src/modules/admin/: app.py  auth.py  utils.py
src/modules/admin/templates/: dashboard.html  error_alert.html  layout.html  token_details.html
src/modules/admin/templates/sqladmin/: base.html
src/modules/admin/views/: __init__.py  ai_models.py  base.py  models.py  tokens.py  users.py  vendors.py
src/modules/api/: proxy.py  system.py
src/modules/auth/: __init__.py  encryption.py  hashers.py  tokens.py
src/modules/cli/: management.py
src/modules/encrypt/: VENDOR_ENCRYPTION.md  encryption.py
src/routers/: __init__.py  admin.py  base.py  proxy.py  system.py
src/services/: auth_hasher.py  cache.py  counters.py  http.py  providers.py  proxy.py  vendors.py
src/settings/: __init__.py  app.py  db.py  log.py
src/templates/admin/: dashboard.html  models.html
src/tests/: conftest.py  mocks.py  test_api.py  test_api_proxy.py  test_api_system.py  test_client_models.py  test_main.py  test_models.py  test_providers.py  test_proxy.py  test_services_http.py  test_services_providers.py  test_services_proxy.py  test_settings.py  test_utils.py
src/tests/api/: test_api_proxy.py  test_api_system.py  test_auth_integration.py
src/tests/services/: test_services_cache.py  test_services_http.py  test_services_providers.py  test_services_proxy.py
src/tests/units/: test_auth_dependencies.py  test_auth_tokens.py  test_dependencies.py  test_models.py  test_repositories.py  test_services.py  test_session.py  test_settings.py  test_simple_ai_client.py  test_utils.py  test_vendor_admin_encryption.py  test_vendor_encryption.py  test_vendor_model_encryption.py  test_vendors_service.py
src/tests/units/admin/: conftest.py  test_admin_app.py  test_admin_views_base.py  test_admin_views_tokens.py  test_admin_views_users.py
src/tests/units/auth/: conftest.py  test_admin_auth.py  test_auth_dependencies.py  test_auth_edge_cases.py  test_auth_hashers.py  test_auth_tokens.py  test_auth_verification.py
src/tests/units/cli/: test_generate_secrets.py  test_management.py  test_secrets.py  test_simple_ai_client.py
