[project]
name = "code-agent"
version = "0.1.0"
description = "FastAPI application providing system information"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "httpx==0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "coverage>=7.8,<7.9",
    "black>=25.1,<25.2",
    "ruff>=0.11,<0.12",
    "mypy>=0.15,<1.16",
    # pycharm requires:
    "setuptools>=78.1,<78.2",
    "pip<26"
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]

# === Ruff settings ====

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
    ".idea/",
]

# Same as Black.
line-length = 100
indent-width = 4
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
strict = true
exclude = ['src/tests', 'alembic', '.local', 'test_*']
